kube/kind/ADD-INGRESS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-1
  namespace: nginx-beacon
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ing-1
            pathType: Prefix
            backend:
              service:
                name: ing-1
                port:
                  number: 80
